@@ -4,13 +4,13 @@ __RETUSS__ (Real-time Ensure Traceability between UML and Source-code System) �
 
 ## 言い訳
 
-現在は何もありませんが、これから少しずつ大きくしていこうと思います。
+現在はただの低レベルなクラス図描画ツールですが、これから少しずつ大きくしていこうと思います。
 
 ## 開発環境
 
 * Windows 10 Pro (64 bit) 1703
 * Java9
-* JUnit5
+* JUnit5 (5.0.1)
 
 ## 依存ライブラリ
 
@@ -24,3 +24,21 @@ __RETUSS__ (Real-time Ensure Traceability between UML and Source-code System) �
 * testfx-core-4.0.8-alpha ([TestFX](https://github.com/TestFX/TestFX))
 * testfx-internal-java9-4.0.8-alpha (TestFX)
 * testfx-junit5-4.0.8-alpha (TestFX)
+
+### 依存関係
+
+* assertj
+* jmockit
+* junit-jupiter
+  * opentest4j
+* testfx
+  * guava
+  * hamcrest
+
+## コンパイルでの注意点
+
+* テストコードのコンパイル時には `-Djdk.attach.allowAttachSelf` システムプロパティを追加してください。
+* TestFX内で `--illegal-access` エラーを起こしますが、2017/11/10現在のJava9では特に問題ありません。
+  そのうち使えなくなるかもしれませんが、それより前にTestFXが対応してくれると信じましょう。
+* JMockitは他のライブラリと比べても、バージョンの違いによる仕様変更が激しいようです。
+  そこまで核となるような事はしていないと思いますが、気を付けてください。
